--- a/app/views/themes/waterfall/wine_details/show.html.erb
+++ b/app/views/themes/waterfall/wine_details/show.html.erb
@@ -32,7 +32,7 @@
   </div>
   <%#= render "wine_details/share/likers" %>
   <div class="wp_space_line ptb30">
-    <%= render "wine_details/share/comments"  %>
+    <%= render "comments/comments"  %>
   </div>
   <%= render "wine_details/share/followers" %>
   <%= render "wine_details/share/owners" %>
