--- a/app/views/themes/waterfall/photos/wine_photo_detail.html.erb
+++ b/app/views/themes/waterfall/photos/wine_photo_detail.html.erb
@@ -18,12 +18,12 @@
 			<div class="mb20">
 				<div class="pre_next">
 				  <% if previous_photo = previous_page(@wine_detail.photo_ids, @photo.id) %>
-              <%= link_to photo_wine_path(@wine_detail, :photo_id => previous_photo), :class => "btn_gray mr5" do %>
+              <%= link_to wine_photo_path(@wine_detail, previous_photo), :class => "btn_gray mr5" do %>
                   <span>前一张</span>
               <% end %>
           <% end %>
           <% if next_photo = next_page(@wine_detail.photo_ids, @photo.id) %>
-              <%= link_to photo_wine_path(@wine_detail, :photo_id => next_photo), :class => "btn_gray" do %>
+              <%= link_to wine_photo_path(@wine_detail, next_photo), :class => "btn_gray" do %>
                   <span>后一张</span>
               <% end %>
           <% end %>              
