--- a/app/views/themes/waterfall/users/comments.html.erb
+++ b/app/views/themes/waterfall/users/comments.html.erb
@@ -8,7 +8,7 @@
   	<div class="title_btn">
         <h1>评论 <span class="font_12 more">(共 <%= @user.comments_count %> 条)</span> </h1>
       </div>
-       <%= render "mine/share/comments" %>
+       <%= render "users/share/comments" %>
       <div class="pagination">
 	    <%= paginate @comments %>
       <!-- pagination  end   -->
@@ -18,7 +18,7 @@
   	<div class="sidebox">
       	<div class="title"><h3>热门酒款</h3></div>
           <div class="main">
-            <%= render "mine/share/most_wine_follows" %>
+            <%= render "users/share/most_wine_follows" %>
           </div>
       </div>
   </div>
