--- a/app/views/themes/waterfall/users/share/_comments.html.erb
+++ b/app/views/themes/waterfall/users/share/_comments.html.erb
@@ -1,79 +1,65 @@
-<% @comments.each do |comment| %>
 <!-- 酒评论带评分 -->
-<% if comment.commentable_type == "Wines::Detail" %>
-<div class="item relative dotted">
-  <div class="pic">
-	<%= wine_cover_tag comment.commentable, :thumb_name => :thumb, :width => 90, :height => 90 %>
-  </div>
-  <p class="comment_info">
-    评论  <%= raw link_to comment.commentable.name, wine_path(comment.commentable.id) %>
-	 <%= link_to_icon "wine_comment", "#" %>
-    <br /><%= comment.created_at.to_s(:normal) %>
-	<%= star_rate_tag(comment.point) %>
-  </p>
-  <p class="description"> <%= comment.body %></p>
-  <%= link_to_icon "delete", "/", :style => "display: none", :class => "delete" %>
-  <%= link_to_icon "edit", "/", :style => "display: none", :class => "edit" %>
-</div>
-<div class="clear"></div>
-
-<% elsif comment.commentable_type == "Winery" %>
-
+<ul class="comment_list">
+ <% @comments.each do |comment| %> 
+ <% if comment.commentable_type == "Wines::Detail" %>
+<li>
+    <div class="pic">
+     <%= link_to wine_path(comment.commentable) do %>
+        <%= wine_cover_tag comment.commentable, :thumb_name => :thumb, :width => 70, :height => 70 %>
+      <% end %>
+    </div>
+      <div class="main">
+        <div class="winename">
+          评论了酒: 
+          <%= link_to comment.commentable.cname, wine_path(comment.commentable) %>
+          <span class="date"><%= comment.created_at.to_s(:normal)%></span><span class=" star_s3_h"></span>
+        </div>
+        <div class="content"><%= comment.body %></div>
+    </div>
+</li>
 <!-- 酒庄评论 -->
-<div class="item relative dotted">
-  <div class="pic">
-    <%= image_tag "v2/test/m_w_3.png", :title => "title", :class => "class" %>
-  </div>
-  <p class="comment_info">
-    评论 <a href="#">某某酒庄</a> <%= link_to_icon "winery_comment", "/" %>
-    <br />2011-12-23
-  </p>
-  <p class="description"> 味道确实好 </p>
-  <%= link_to_icon "delete", "/", :style => "display: none", :class => "delete" %>
-  <%= link_to_icon "edit", "/", :style => "display: none", :class => "edit" %>
-</div>
-<div class="clear"></div>
-
-<% elsif comment.commentable_type == "Photo" %>
-
+<% elsif  comment.commentable_type == "Winery"%>
+<li>
+    <div class="pic">
+     <%= link_to winery_path(comment.commentable) do %>
+        <%= image_tag comment.commentable.logo_url, :thumb_name => :thumb, :width => 70, :height => 70 %>
+      <% end %>
+    </div>
+      <div class="main">
+        <div class="winename">
+          评论了酒庄: 
+          <%= link_to comment.commentable.name_zh, winery_path(comment.commentable) %>
+          <span class="date"><%= comment.created_at.to_s(:normal)%></span><span class=" star_s3_h"></span>
+        </div>
+        <div class="content"><%= comment.body %></div>
+    </div>
+</li>
 <!-- 图片评论 -->
-<div class="item relative dotted">
-  <div class="pic float_right">
-    <%= image_tag "v2/test/m_w_3.png", :title => "title", :class => "class" %>
-  </div>
-  <p class="comment_info">
-    评论 <a href="#"> 1998 干红葡萄酒 France 法国的照片</a> <%= link_to_icon "photo_comment", "/" %>
-    <br />2011-12-23
-  </p>
-  <p class="description"> “这张照片是我一个朋友拍的，他是摄影师也是红酒爱好者。” </p>
-  <%= link_to_icon "delete", "/", :style => "display: none", :class => "delete" %>
-  <%= link_to_icon "edit", "/", :style => "display: none", :class => "edit" %>
-</div>
-<div class="clear"></div>
-
-<% elsif !comment.parent_id.nil? %>
-<!-- 回复别人的评论 -->
-<div class="item relative dotted">
-  <div class="pic">
-    <%= image_tag "v2/test/m_w_3.png", :title => "title", :class => "class" %>
-  </div>
-  <p class="comment_info">
-    评论 <a href="#">某某酒庄</a> <%= link_to_icon "reply_comment", "/" %>
-    <br />2011-12-23
-  </p>
-  <p>回复<%= link_to_user @user, user_path(@user.id) %>:<i> 这里是被评论的内容</i> </p>
-  <p class="description"> 味道确实好 </p>
-  <%= link_to_icon "delete", "/", :style => "display: none", :class => "delete" %>
-  <%= link_to_icon "edit", "/", :style => "display: none", :class => "edit" %>
-</div>
-<div class="clear"></div>
-
-<% end%>
-
-
-
+<% elsif  comment.commentable_type == "Photo"%>
+<li>
+    <div class="pic">
+    <% 
+    commentable_path = if comment.commentable.imageable_type == "Wines::Detail"
+      wine_photo_path(comment.commentable.imageable, comment.commentable)
+    elsif comment.commentable.imageable_type == "Winery"
+      winery_photo_path(comment.commentable.imageable, comment.commentable)
+    elsif comment.commentable.imageable_type == "Album"
+      user_album_photo_user_path(comment.commentable.user_id, comment.commentable.imageable, comment.commentable)
+    end
+    %>
+     <%= link_to commentable_path do %>
+        <%= image_tag comment.commentable.image_url, :thumb_name => :thumb, :width => 70, :height => 70 %>
+      <% end %>
+    </div>
+      <div class="main">
+        <div class="winename">
+          评论了图片
+          <span class="date"><%= comment.created_at.to_s(:normal)%></span><span class=" star_s3_h"></span>
+        </div>
+        <div class="content"><%= comment.body %></div>
+    </div>
+</li>
 <% end %>
-
-
-
+<% end %>
+</ul>
 
