--- a/app/views/themes/waterfall/cellars/show.html.erb
+++ b/app/views/themes/waterfall/cellars/show.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 <div class="whitespace">
 <div id="hp">
-<%= render "sub_nav", :action => params[:action] %>
-<%= render "share/show_cellar" %>
+<%= render "users/sub_nav", :action => params[:action] %>
+<%= render "show_cellar" %>
 </div>
 </div>
