--- a/app/views/themes/waterfall/cellar_items/_form.html.erb
+++ b/app/views/themes/waterfall/cellar_items/_form.html.erb
@@ -55,7 +55,7 @@
       <label>&nbsp;</label>
       <div class="content">
         <a href=“#” class="btn_gray mr5 save"><span><%=  button_name %></span></a>
-        <%= link_to mine_cellar_path(@cellar), :class => "btn_gray" do %>
+        <%= link_to cellar_path(@cellar), :class => "btn_gray" do %>
             <span>取消</span>
         <% end %>
       </div>
@@ -64,7 +64,7 @@
 </div>
 <div class="right">
   <div class="wine_img">
-    <%= wine_cover_tag( @wine_detail, :thumb_name => "thumb", :title => @wine_detail.name, :width => 200, :height => 200, :alt => @wine_detail.name )%>
+    <%= wine_cover_tag( @wine_detail, :thumb_name => "thumb", :title => @wine_detail.name, :alt => @wine_detail.name )%>
   </div>
   <div class="clear"></div>
 </div>
