--- a/app/views/themes/waterfall/cellar_items/add_step_one.html.erb
+++ b/app/views/themes/waterfall/cellar_items/add_step_one.html.erb
@@ -1,8 +1,6 @@
-<% content_for :css do %>
-	<%= theme_stylesheet_link_tag :hp %>
-	<% end %>
+<div class="whitespace">
 	<div id="hp">
-	<%= render "mine/sub_nav", :action => params[:action] %>
+	<%= render "users/sub_nav", :action => params[:action] %>
 	  <div id="cellar">
       <div class="title_btn">
         <h1>添加藏酒</h1>
@@ -16,4 +14,5 @@
   </div>
 
   <div class="clear"></div>
+	</div>
 	</div>
