--- a/app/views/themes/waterfall/cellar_items/add_step_two.html.erb
+++ b/app/views/themes/waterfall/cellar_items/add_step_two.html.erb
@@ -1,8 +1,6 @@
-<% content_for :css do %>
-	<%= theme_stylesheet_link_tag :hp %>
-	<% end %>
+<div class="whitespace">
 	<div id="hp">
-	<%= render "mine/sub_nav", :action => params[:action] %>
+	<%= render "users/sub_nav", :action => params[:action] %>
     <div id="cellar">
       <div class="title_btn">
         <h1>添加藏酒</h1>
@@ -16,7 +14,7 @@
           <div class="mb20">
             <div class="float_r">
               <span class="notice_b">这些都不是您要找的酒？</span>
-              <%= link_to add_mine_cellar_items_path(current_user.cellar, :step => 1), :class => "btn_gray" do %>
+              <%= link_to add_cellar_items_path(current_user.cellar, :step => 1), :class => "btn_gray" do %>
                   <span>添加酒款</span>
               <% end %>
             </div>
@@ -27,7 +25,7 @@
             <% @search.wines.each do |wine_detail| %>
                 <li>
                   <div class="add_to_cellar">
-                    <%= link_to new_mine_cellar_item_path(current_user.cellar, :wine_detail_id => wine_detail.id), :class => "btn_blue" do %>
+                    <%= link_to new_cellar_item_path(current_user.cellar, :wine_detail_id => wine_detail.id), :class => "btn_blue" do %>
                         <span>加入酒窖</span>
                     <% end %>
                   </div>
@@ -48,11 +46,12 @@
           <%= link_to new_mine_wine_path, :class => "btn_gray mr5" do %>
             <span>我来添加</span>
           <% end %>
-          <%= link_to add_mine_cellar_items_path(current_user.cellar, :step => 1), :class => "btn_gray" do %>
+          <%= link_to add_cellar_items_path(current_user.cellar, :step => 1), :class => "btn_gray" do %>
             <span>重新搜索</span>
           <% end %>
         </p>
       <% end %>
     </div>
   </div>
+</div>
 </div>
