--- a/app/views/themes/waterfall/cellar_items/new.html.erb
+++ b/app/views/themes/waterfall/cellar_items/new.html.erb
@@ -1,15 +1,13 @@
-<% content_for :css do %>
-	<%= theme_stylesheet_link_tag :hp %>
-<% end %>
+<div class="whitespace">
   <div id="hp">
-	<%= render "mine/sub_nav", :action => params[:action] %>
+	<%= render "users/sub_nav", :action => params[:action] %>
     <div id="cellar">
       <div class="title_btn"><h1>添加藏酒</h1></div>
       <div class="step">
         <div class="step_thr"></div>
       </div>
       <div id="stylized" class="myform">
-        <%= form_for @cellar_item, :validate => true, :url => mine_cellar_items_path(@cellar) do |f| %>
+        <%= form_for @cellar_item, :validate => true, :url => cellar_items_path(@cellar) do |f| %>
             <input type="hidden" name="wine_detail_id" value="<%= @wine_detail.id%>"/>
             <%= render "form", :f => f, :button_name => "加入酒窖" %>
         <% end %>
@@ -25,3 +23,4 @@
     });
 </script>
 		
+</div>
