--- a/app/views/themes/waterfall/users/_sub_nav.html.erb
+++ b/app/views/themes/waterfall/users/_sub_nav.html.erb
@@ -3,19 +3,19 @@
 <% end %>
 
 <% sub_menu = {
-        "wine_favorite"   => [user_cellar_path(@user.id, @user.cellar), @user.wines_count],
+     "wine_favorite"   =>  [cellars_user_path(@user.id, @user.cellar), @user.wines_count],
      "wine_follows"     => [wine_follows_user_path(@user.id), @user.wine_followings_count],
      "winery_follows"   => [winery_follows_user_path(@user.id), @user.winery_followings_count],
      "comments"  => [comments_user_path(@user.id), @user.comments_count],
      # "testing_notes"  => ["testing_notes", 0],
      "followings"     => [followings_user_path(@user.id), @user.followings_count],
      "followers"    => [followers_user_path(@user.id), @user.followers_count],
-     "albums"           => [user_albums_path(@user.id, :trailing_slash => true), @user.albums_count]
+     "albums"       => [albums_user_path(@user.id, :trailing_slash => true), @user.albums_count]
  } %>
 
   <div class="hp_header">
     <div class="hp_right">
-      <%= link_to user_cellar_path(@user, @user.cellar), :class => "btn_red_sb" do %>
+      <%= link_to cellars_user_path(@user, @user.cellar), :class => "btn_red_sb" do %>
         <% if is_login_user? @user %>
         <span>我的酒窖</span>
         <% else %>
@@ -30,10 +30,8 @@
                         :avatar_version => :large },
                         {:width => 130, :height => 130}  %>
     </div>
-    
     <div class="hp_info">
-      
-      <% if is_login_user? @user  %>
+      <% if is_login_user? @user  # 如果用户登陆而且访问自己的页面 %>
       <div class="username"><%= @user.username %></div>
       <div class="mystatu"><%= @user.profile.bio %> <span><a href="#">修改</a></span></div>
       <div class="item">
@@ -44,7 +42,7 @@
        <div class="username"><%= @user.username %></div>
        <div class="mystatu"><%= @user.profile.bio %></div>
        <div class="item">
-        <% if (current_user.is_following @user) && (@user.is_following current_user) %>
+        <% if (current_user.is_following @user) && (@user.is_following current_user) # 如果用户互相关注%>
           <span class="icon_fol_e mr5">互相关注<span class="cancl_fol"><a href="#">(取消)</a></span></span>
         <% elsif current_user.is_following @user %>
           <span class="icon_fol mr5">已关注<span class="cancl_fol"><a href="#">(取消)</a></span></span>
