一种酒清洗多张图片，酒庄页面debug

--- a/app/views/themes/waterfall/wineries/show.html.erb
+++ b/app/views/themes/waterfall/wineries/show.html.erb
@@ -19,9 +19,7 @@
         </div>
 
         <div class="content">
-          <ul class="winery_pic">
-            <%= render :partial => "thumb_photo", :collection => @winery.photos, :as => :photo %>
-          </ul>
+          <%= render :partial => "thumb_photo" %>
           <div class="clear"></div>
         </div>
 
