--- a/app/views/themes/waterfall/wineries/_thumb_photo.html.erb
+++ b/app/views/themes/waterfall/wineries/_thumb_photo.html.erb
@@ -1,6 +1,12 @@
-<li>
-  <%= link_to "#" do %>
-      <%= image_tag photo.image_url(:thumb), :alt => "酒庄图片" %>
+<ul class="winery_pic">
+  <% @winery.photos.limit(4).each_with_index do |photo, index| %>
+      <li class="<%= 'last' if index == 3 %>">
+        <%= link_to winery_photo_path(@winery, photo) do %>
+            <%= image_tag photo.image_url(:thumb), :alt => "酒庄图片" %>
+        <% end %>
+      </li>
   <% end %>
-</li>
+</ul>
+
+
 
