--- a/app/views/themes/waterfall/wine_details/_timeline.html.erb
+++ b/app/views/themes/waterfall/wine_details/_timeline.html.erb
@@ -68,7 +68,7 @@
           </ul>
       </div>
       <div class="iw_more">
-      	<%= link_to "去看看他的酒窖", user_cellar_path(l.actor, l.actor)%>
+      	<%= link_to "去看看他的酒窖", cellars_user_path(l.actor, l.actor.cellar)%>
       </div>
 </div>
 
