--- a/app/views/themes/waterfall/layouts/_user_fragment.html.erb
+++ b/app/views/themes/waterfall/layouts/_user_fragment.html.erb
@@ -12,7 +12,7 @@
         <li><%= link_to "设置", basic_settings_path() %></li>
         <li><%= link_to "找朋友", :controller => "/friends", :action => "find" %></li>
         <li><%= link_to "我的Patrick", user_path(current_user) %></li>
-        <li><%= link_to "我的酒窖", cellars_user_path(current_user, current_user.cellar) %></li>
+        <li><%#= link_to "我的酒窖", cellars_user_path(current_user, current_user.cellar) %></li>
         <li><%= link_to "私信", conversations_path %></li>
         <li><%= link_to "登出",  logout_path %></li>
       </ul>
