--- a/app/views/themes/waterfall/albums/upload.html.erb
+++ b/app/views/themes/waterfall/albums/upload.html.erb
@@ -18,9 +18,9 @@
     <p>提示：每次最多可以批量上传10张照片</p>
   </div>
 </div>
-<div id="rightcol">
+<!-- <div id="rightcol">
   <p class="mb20">相册总容量xxxG</p>
-</div>
+</div> -->
 <div class="clear"></div>
 <script type="text/javascript">
   var upload_params = {
