--- a/app/views/themes/waterfall/albums/edit.html.erb
+++ b/app/views/themes/waterfall/albums/edit.html.erb
@@ -32,7 +32,7 @@
             <span>保存修改</span>
           </a>
           
-          <%= link_to albums_path, :class => "btn_gray"  do  %>
+          <%= link_to albums_user_path(@user), :class => "btn_gray"  do  %>
           <span>取消</span>
           <% end %>
           
