--- a/app/views/themes/waterfall/friends/find.html.erb
+++ b/app/views/themes/waterfall/friends/find.html.erb
@@ -20,7 +20,7 @@
         <% end %>
       </p>
       <p>
-        <%= link_to "#", :class => "btn_gray mr5" do %>
+        <%= link_to sync_friends_path, :class => "btn_gray mr5" do %>
             <span>搜索全部同步项</span>
         <% end %>
         <%= link_to "#", :class => "btn_gray" do %>
@@ -44,14 +44,14 @@
 
     <div class="gray_box invite">
       <h3>通过邮件邀请朋友加入</h3>
-      <%= form_tag :action => "email_invite" do %>
+      <%= form_tag :action => "email_invite", :html => {:id => "invote_user"} do %>
         <p>
           <%= text_area_tag "email_address", nil, :placeholder => '输入邮件地址' %>
           <%= text_area_tag "description", nil,  :placeholder => '输入邀请留言' %>
           <%= text_field_tag "name", nil, :placeholder => "输入你的姓名" %>
         </p>
         <p>
-          <%= link_to "javascript:void(0);", :class => "btn_gray" do %>
+          <%= link_to "javascript:void(0);", :class => "btn_gray save" do %>
             <span>发送邀请</span>
           <% end %>
         </p>
@@ -62,4 +62,9 @@
 
   </div>
 </div>
-
+<script type="text/javascript" charset="utf-8">
+    $('a.save').click(function(){
+        $('.invite form').submit();
+        return false;
+    });
+</script>
