--- a/app/views/themes/waterfall/wineries/index.html.erb
+++ b/app/views/themes/waterfall/wineries/index.html.erb
@@ -1,2 +1,27 @@
-<% title @title %>
-<h2>酒庄</h2>
+<% content_for :css  do %>
+<%= theme_stylesheet_link_tag :home %>
+<% end %>
+
+<div id="container" style="position: relative; ">
+<%= render "timeline" %>
+<div style="display: none">
+<%= paginate @timelines %>
+</div>
+<div class="clear"></div>
+</div>
+
+<script type="text/javascript">
+$('#container').masonry({
+		itemSelector: '.item',
+		resizeable: true
+	}).on('mouseenter', 'div.gulu', function(){
+		$(this).addClass('ghover');
+	}).on('mouseleave', 'div.gulu', function(){
+		$(this).removeClass('ghover');
+	});
+	// setTimeout(function(){
+	// 	$('#container').masonry();
+	// }, 200);
+
+</script>
+
