Update theme about User settigns
Signed-off-by: Weston <weixuhong@gmail.com>

--- a/app/views/themes/waterfall/settings/update_password.html.erb
+++ b/app/views/themes/waterfall/settings/update_password.html.erb
@@ -1,30 +1,38 @@
-<%= render "sub_nav", :action => params[:action]  %>
-
-<div class="settings update_password">
-  <%= render_stickies %>
-  <%= form_for @user, :validate => true, :url => url_for(:action => :update_password ), :html => { :method => :put } do |f| %>
-
-  <%= f.hidden_field :reset_password_token %>
-
-  <table border="0" cellspacing="15" cellpadding="5">
-    <tr>
-      <td class="label"><%= f.label :password, "新密码" %></td>
-      <td  class="text_input"> <%= f.password_field :password %></td>
-    </tr>
-    <tr>
-      <td class ="label"><%= f.label :password_confirmation %></td>
-      <td class="text_input"><%= f.password_field :password_confirmation %></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td class="submit">
-        <%= image_submit_tag "v2/button/submit_red.png", :align => "center" %>
-        <%= link_to "取消", {:action => "basic"}, :class => "red", :align => "center"  %>
-      </td>
-    </tr>
-  </table>
-
+<% content_for :css do  %>
+<%= theme_stylesheet_link_tag "setting" %>
 <% end %>
+<div class="whitespace setting">
+  <h1 class="main_title">修改密码</h1>
+  <div id="stylized" class="myform">
+   <%= form_for @user, 
+   :validate => true, 
+   :url => url_for(:action => :update_password ), 
+   :html => { :method => :put, :id => :form } do |f| %>
 
-<!-- .settings end -->
+   <%= render_stickies %>
+   <%= f.hidden_field :reset_password_token %>
+   <div class="required">
+     <label><span>*</span>新密码</label>
+     <%= f.password_field :password, :class => "text name" %>
+     <span class="error">密码不能少于6位字符</span> 
+   </div>
+   <div class="required">
+     <label><span>*</span>确认密码</label>
+     <%= f.password_field :password_confirmation, :class => "text name" %>
+     <span class="error">两次密码输入不一致</span>
+   </div>
+   <div class="mt10 optional">
+     <label>&nbsp;</label>
+     <div class="content">
+      <%= link_to "javascript:void(0)", :class => "btn_gray mr5", :onclick => "$(this).parents('form').submit()"  do %>
+      <span>保存</span>
+      <% end %>
+      <%= link_to basic_settings_path, :class => "btn_gray mr5"  do %>
+      <span>返回</span>
+      <% end %>
+    </div>
+  </div>
+  <% end %>
+  <div class="clear"></div>
+  </div
 </div>
