--- a/app/assets/themes/waterfall/stylesheets/main.css
+++ b/app/assets/themes/waterfall/stylesheets/main.css
@@ -135,7 +135,7 @@ textarea.wine_intro {width:500px;height:200px;}
 #recommend h1.en {font-size:12px;}
 #recommend span {display:block;}
 #recommend .wine {margin-bottom:20px;}
-#recommend ul {padding: 0 70px;}
+#recommend ul {padding: 0 70px;zoom:1;}
 #recommend .wine ul.line {border-bottom:1px dotted #ccc;padding-bottom:40px;margin-bottom:40px;}
 #recommend .wine li {float:left;width:250px;margin-right:25px;}
 #recommend .wine li.last {margin-right:0;}
@@ -212,7 +212,7 @@ a.icon_comment {background-position:0 -143px;padding-left:15px;}
 /*common style*/
 .comment_list {margin: 0 0 20px 0;}
 .comment_list li {margin: 0 0 10px 0;padding: 0 0 10px 0;width:590px;float:left;}
-.comment_list .userpic, .comment_post .userpic, .comment_list .winepic {float:left;margin:0 20px 0 0;}
+.comment_list .userpic, .comment_post .userpic, .comment_list .winepic, .comment_post_star .userpic {float:left;margin:0 20px 0 0;}
 .comment_list .username, .comment_list .winename {margin:0 0 3px 0;}
 .comment_list .username span, .comment_list .winename span{display:inline-block;margin-left:10px;}
 .comment_list .pic {float:left;width:70px;margin-right:20px;}
@@ -232,6 +232,13 @@ a.icon_comment {background-position:0 -143px;padding-left:15px;}
 .comment_post .post_main textarea {width:470px;height:80px;background-color:#fff;}
 .comment_post .reply_text {margin:0 0 10px 0;color:#999;}
 .comment_post .reply_text span {margin-right:10px;}
+.comment_post_star, .search .searchbox {background-color:#f3f3f3;border-radius: 5px 5px 5px 5px;padding:15px;zoom:1;}
+.comment_post_star .post_main {float:left;width:410px;}
+.comment_post_star .post_main textarea {width:390px;height:80px;background-color:#fff;}
+.comment_post_star .reply_text {margin:0 0 10px 0;color:#999;}
+.comment_post_star .reply_text span {margin-right:10px;}
+.comment_post_star .evaluate {float:right;width:90px;}
+.comment_post_star .star_rate {margin:5px 0 10px 0;}
 
 /*-------User list--------*/
 .userlist li {width:170px;float:left;margin:0 10px 30px 10px;}
