--- a/app/views/themes/waterfall/settings/basic.html.erb
+++ b/app/views/themes/waterfall/settings/basic.html.erb
@@ -1,83 +1,105 @@
-<%= render "sub_nav", :validate => true, :action => params[:action]  %>
 
-<%= render_stickies %>
 
 <%= javascript_include_tag 'region_china' %>
 <% content_for :css do  %>
-    <%= theme_stylesheet_link_tag "setting" %>
+<%= theme_stylesheet_link_tag "setting" %>
 <% end %>
 
 <div class="whitespace setting">
   <h1 class="main_title">账号设置</h1>
   <div id="stylized" class="myform">
-    <%= form_for @profile, :url => basic_settings_path, :validate => true,  :html => { :class => 'form-horizontal', :multipart => true } do |f| -%>
-        <div class="left">
-            <div class="required"><label><span>*</span>邮箱</label><%= @profile.email %><%= link_to "修改密码", update_password_settings_path %></div>
-            <div class="required"><label><span>*</span>昵称</label><%= f.text_field :username , :class => "text name"%></div>
-            <div class="required">
-              <label><span>*</span>性别</label>
-              <%= radio_button_tag "users_profile[gender]", "1", "1" == @profile.gender %>男
-              <%= radio_button_tag "users_profile[gender]", "0", "0" == @profile.gender %>女
-            </div>
-            <div class="required">
-              <label><span>*</span>生日</label>
-              <%= f.date_select :birthday, :start_year => 1910, :end_year => Time.now.year, :default => { :year => 1980, :month => 9, :day => 6 }  %>
-            </div>
-            <div class="required">
-              <label><span>*</span>所在地</label>
-              <div class="content"><%= f.text_field :hometown %></div>
-            </div>
-            
-            <div class="optional">
-              <label>博客地址</label>
-              <%= f.text_field :website, :class => "text name mr5" %>
-            </div>
-            <div class="optional">
-              <label>介绍</label>
-              <%= f.text_area :bio %>
-            </div>
-            <div class="optional">
-              <label>通知设置</label>
-              <%= link_to privacy_settings_path, :class => "btn_gray" do %>
-                <span>更改通知设置</span>
-              <% end %>
-            </div>
-            <div class="optional">
-              <label style="padding-top:13px;">同步设置</label>
-              <%= render "friends/icons" %>
-              <%= link_to "#", :class => "btn_gray ml10" do %>
-                  <span>更改同步设置</span>
-              <% end %>
-            </div>
-            <div class="mt10">
-              <label>&nbsp;</label>
-              <div class="content">
-                <%= link_to "javascript:void(0);", :class => "btn_gray mr5 save" do %>
-                    <span>保存</span>
-                <% end %>     
-               </div>
-            </div>
-            <div class="clear"></div>
-        </div>
+    <%= render_stickies %>
+    <%= form_for @profile, 
+    :url => basic_settings_path, 
+    :validate => true,  
+    :html => { :class => 'form-horizontal', :multipart => true } do |f| -%>
 
-        <div class="right">
-           <div class="avatar">
-             <%= image_tag current_user.avatar_url(:large)%>
-             <p class="mt10">
-               <%= link_to avatar_settings_path, :class => "btn_gray" do %>
-                 <span>修改头像</span>
-               <% end %>
-             </p>
-           </div>
+    <div class="left">
+      <div class="required">
+        <label><span>*</span>邮箱</label>
+        <%= @profile.email %>
+        <%= link_to "修改密码", update_password_settings_path %>
+      </div>
+      <div class="required">
+        <label><span>*</span>昵称</label>
+        <%= f.text_field :username , :class => "text name"%>
+      </div>
+      <div class="required">
+        <label><span>*</span>性别</label>
+        <%= f.radio_button :gender, 1  %>男
+        <%= f.radio_button :gender, 0 %>女
+      </div>
+      <div class="required">
+        <label><span>*</span>生日</label>
+        <%= f.date_select :birthday, :start_year => 1910, :end_year => Time.now.year, :default => { :year => 1980, :month => 9, :day => 6 }  %>
+      </div>
+      <div class="required">
+        <label><span>*</span>所在地</label>
+        <div class="content"><%= f.text_field :hometown %></div>
+      </div>
+      <div class="optional">
+        <label>博客地址</label>
+        <%= f.text_field :website, :class => "text name mr5" %>
+      </div>
+      <div class="optional">
+        <label>介绍</label>
+        <%= f.text_area :bio, :size => "48x5" %>
+      </div>
+      <div class="optional">
+        <label>通知设置</label>
+        <%= link_to privacy_settings_path, :class => "btn_gray" do %>
+        <span>更改通知设置</span>
+        <% end %>
+      </div>
+      <div class="optional">
+        <label style="padding-top:13px;">同步设置</label>
+        <%= render "friends/icons" %>
+        <%= link_to "#", :class => "btn_gray ml10" do %>
+        <span>更改同步设置</span>
+        <% end %>
+      </div>
+      <div class="mt10">
+        <label>&nbsp;</label>
+        <div class="content">
+          <%= link_to "javascript:void(0);", :class => "btn_gray mr5 save" do %>
+          <span>保存</span>
+          <% end %>     
         </div>
-        <div class="clear"></div>
-    <% end %>
-  </div>
+      </div>
+      <div class="clear"></div>
+    </div>
+
+    <div class="right">
+     <div class="avatar">
+       <%= image_tag current_user.avatar_url(:large) + "?timestamp=#{Time.now}" %>
+       <p class="mt10">
+         <%= link_to avatar_settings_path, :class => "btn_gray" do %>
+         <span>修改头像</span>
+         <% end %>
+       </p>
+
+     </div>
+   </div>
+   <div class="clear"></div>
+   <% end %>
+ </div>
 </div>
 
 <script type="text/javascript" charset="utf-8">
-    $('a.save').click(function(){
-        $('.myform form').submit();
-        return false;
-    });
+$('a.save').click(function(){
+  $('.myform form').submit();
+  return false;
+});
 </script>
+
+<style type="text/css">
+ #stylized .field_with_errors label.message {
+    display: inline;
+    float: none;
+    padding: 0;
+    margin: 0;
+  }
+  #stylized .field_with_errors .message {
+    padding: 0;
+  }
+</style>
