notice setting update

--- a/public/template/user_notice_setting.html
+++ b/public/template/user_notice_setting.html
@@ -85,6 +85,7 @@
                         关于我的iWine帐号的产品或服务更新</label></p>
                     </div>
                 </div>
+                <div class="align_c mt20"><a href="#" class="btn_gray"><span>保存设置</span></div>
             </form>
    	  </div>
     </div>
