friends_sys_setting update

--- a/public/template/friends_sys_setting.html
+++ b/public/template/friends_sys_setting.html
@@ -38,8 +38,10 @@
     </div>
     <div id="wrapper950">
     	<div class="whitespace friends">
-            <h1 class="main_title">同步设置</h1>
-            <h3>同步各大社区网站，随时分享你在iWine的有趣发现！</h3>
+            <a href="friends_sns_bound.html" class="btn_gray float_r"><span>返回</span></a>
+          <h1 class="main_title">同步设置</h1>
+            <div class="clear"></div>
+        <h3>同步各大社区网站，随时分享你在iWine的有趣发现！</h3>
             <div class="sys">
             	<ul>
                 	<li>
